--- a/ghosts/index.html
+++ b/ghosts/index.html
@@ -14,7 +14,7 @@
         #map-A {
           position:absolute; top:0; bottom:0; width:100%;
           /* -webkit-filter: blur(5px); */
-          -webkit-mask-box-image: -webkit-radial-gradient(black 0%, transparent 50%);
+          -webkit-mask-box-image: -webkit-radial-gradient(transparent 50%, black 100%);
         }
         #map-B { position:absolute; top:0; bottom:0; width:100%; }
     </style>
