--- a/textures/index.html
+++ b/textures/index.html
@@ -14,7 +14,7 @@
         #map-A {
           position:absolute; top:0; bottom:49.9%; width:100%;
         }
-        #map-B { position:absolute; top:50%; bottom:0; width:100%; }
+        #map-B { position:absolute; top:50.1%; bottom:0; width:100%; }
         .flip {
           -moz-transform: scaleY(-1);
           -o-transform: scaleY(-1);
@@ -22,6 +22,7 @@
           transform: scaleY(-1);
           filter: FlipW;
           -ms-filter: "FlipW";
+          /* bottom: 50.1% */
         }
         .mapboxgl-canvas:focus { outline: none }
     </style>
