--- a/salish-sea/index.html
+++ b/salish-sea/index.html
@@ -87,6 +87,7 @@
         hash: true,
         bearing: 0,
         style: style,
+        customAttribution: "<a href='https://www.ocean.washington.edu/data/pugetsound/psdem2005.html' target='_blank'>PSDEM</a> | <a href='https://twitter.com/DnomadB' target='_blank'>@dnomadb</a>",
         transformRequest: (url, type) => {
           if (
             type === "Tile" &&
