--- a/salish-sea/index.html
+++ b/salish-sea/index.html
@@ -23,11 +23,25 @@
         bottom: 0;
         width: 100%;
       }
+      #info {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        padding: 5px;
+        width: 75px;
+        padding: 5px;
+        background-color: white;
+        color: white;
+        border-radius: 5px;
+        text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
+        font-family: Sans-Serif;
+        text-align: right;
+      }
     </style>
   </head>
   <body>
     <div id="map"></div>
-
+    <div id="info"></div>
     <script>
       mapboxgl.accessToken =
         "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ";
@@ -87,7 +101,8 @@
         hash: true,
         bearing: 0,
         style: style,
-        customAttribution: "<a href='https://www.ocean.washington.edu/data/pugetsound/psdem2005.html' target='_blank'>PSDEM</a> | <a href='https://twitter.com/DnomadB' target='_blank'>@dnomadb</a>",
+        customAttribution:
+          "<a href='https://www.ocean.washington.edu/data/pugetsound/psdem2005.html' target='_blank'>PSDEM</a> | <a href='https://twitter.com/DnomadB' target='_blank'>@dnomadb</a>",
         transformRequest: (url, type) => {
           if (
             type === "Tile" &&
@@ -108,7 +123,7 @@
         // add the DEM source as a terrain layer with exaggerated height
         map.setTerrain({
           source: "mapbox-dem",
-          exaggeration: parseFloat(exaggeration)
+          exaggeration: ["interpolate", ["linear"], ["zoom"], 8, 10, 15, 2]
         });
 
         // add a sky layer that will show when the map is highly pitched
@@ -120,6 +135,33 @@
             "sky-atmosphere-sun": [0.0, 0.0],
             "sky-atmosphere-sun-intensity": 15
           }
+        });
+        const ocean = [
+          [0, 127, 0],
+          [0, 85, 28],
+          [0, 43, 56],
+          [0, 0, 85],
+          [0, 41, 113],
+          [0, 85, 142],
+          [0, 127, 170],
+          [87, 171, 199],
+          [170, 212, 227],
+          [255, 255, 255]
+        ];
+        map.on("mousemove", e => {
+          const ele =
+            Math.round(
+              map.queryTerrainElevation(e.lngLat, { exaggerated: false }) * 100
+            ) / 100;
+
+          const [R, G, B] = ocean[Math.round(((ele + 250) / 250) * 10) - 1];
+
+          document.getElementById("info").innerHTML = `${ele}m`;
+          document.getElementById(
+            "info"
+          ).style.backgroundColor = `rgb(${R}, ${G}, ${B})`;
+          // popup.setLngLat(e.lngLat).setHTML(ele);
+          // map.queryTerrainElevation()
         });
       });
     </script>
