--- a/multi-lights/index.html
+++ b/multi-lights/index.html
@@ -13,8 +13,8 @@
         body { margin:0; padding:0; }
         #map-A {
           position:absolute; top:0; bottom:0; width:100%;
-          /* -webkit-filter: blur(5px); */
-          /* -webkit-mask-box-image: -webkit-linear-gradient(black 5%, transparent 45%, transparent 55%, black 95%); */
+          -webkit-filter: blur(5px);
+          -webkit-mask-box-image: -webkit-linear-gradient(black 5%, transparent 45%, transparent 55%, black 95%);
         }
         #map-B { position:absolute; top:0; bottom:0; width:100%; }
     </style>
