--- a/global-bathymetry/index.html
+++ b/global-bathymetry/index.html
@@ -28,7 +28,7 @@
       const query = new URLSearchParams(window.location.search);
       const threed = query.get("3d") === "true";
       mapboxgl.accessToken =
-        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ";
+        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjbGdsOHRpYWcxbWxwM3NueWYwYWYwbms0In0.zb8hlW2-BNebPuQ2hhiAuw";
 
       const tilesetID = "dnomadb.gebco-bathymetry";
 
