--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         #main {
           position:absolute; top:0; bottom:0; width:100%;
-          background-image: url(https://api.mapbox.com/styles/v1/dnomadb/cju1el5dt14ff1fthtpj0fqli/static/-121.7465,46.8536,11,0,0/1280x800@2x?access_token=pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ);
+          background-image: url(https://api.mapbox.com/styles/v1/dnomadb/cju1el5dt14ff1fthtpj0fqli/static/-121.7465,46.8536,11,0,0/1280x800@2x?access_token=pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjbGdsOHRpYWcxbWxwM3NueWYwYWYwbms0In0.zb8hlW2-BNebPuQ2hhiAuw);
           background-size: cover;
           background-position: center;
         }
