--- a/salish-sea/index.html
+++ b/salish-sea/index.html
@@ -44,7 +44,7 @@
     <div id="info"></div>
     <script>
       mapboxgl.accessToken =
-        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ";
+        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjbGdsOHRpYWcxbWxwM3NueWYwYWYwbms0In0.zb8hlW2-BNebPuQ2hhiAuw";
 
       const tilesetID = "dnomadb.salish-sea-bathymetry";
       const exaggeration = 8;
