--- a/thalassa/index.html
+++ b/thalassa/index.html
@@ -30,7 +30,7 @@
 
     <script>
       mapboxgl.accessToken =
-        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ";
+        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjbGdsOHRpYWcxbWxwM3NueWYwYWYwbms0In0.zb8hlW2-BNebPuQ2hhiAuw";
       const query = new URLSearchParams(window.location.search);
       const tilesetID = "dnomadb.mesoyeios-thalassa-2"
 			const exaggeration = 15
