--- a/vashon-trees/index.html
+++ b/vashon-trees/index.html
@@ -67,7 +67,7 @@
     <script>
       let elevationTileset = "dnomadb.vashon-dtm";
       mapboxgl.accessToken =
-        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjaW16aXFsZzUwNHJmdjdra3h0Nmd2cjY1In0.SqzkaKalXxQaPhQLjodQcQ";
+        "pk.eyJ1IjoiZG5vbWFkYiIsImEiOiJjbGdsOHRpYWcxbWxwM3NueWYwYWYwbms0In0.zb8hlW2-BNebPuQ2hhiAuw";
       var map = new mapboxgl.Map({
         container: "map",
         zoom: 13.1,
